kubernetes/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: google-talk-demo
spec:
  replicas: 1
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 0
  template:
    metadata:
      name: google-talk-demo
      labels:
        app: google-talk-demo
    spec:
      containers:
        - name: backend
          image: gcr.io/PROJECT_ID/google-demo:1.0.0
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - name: http
              containerPort: 80
