kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: google-talk-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "google-demo.reaktor.ae"
      http:
        paths:
          - path: /
            backend:
              serviceName: google-talk-demo-service
              servicePort: 80
